force-app/main/default/objects/Project__c/fields/AccountPlan__c.field-meta.xml
<CustomField>
    <fullName>AccountPlan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Plan</label>
    <referenceTo>AccountPlan__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>