force-app/main/default/objects/Project__c/fields/ActivityDate__c.field-meta.xml
<CustomField>
    <fullName>ActivityDate__c</fullName>
    <label>Activity Date</label>
    <type>Date</type>
</CustomField>