force-app/main/default/objects/Project__c/fields/ActualMargins__c.field-meta.xml
<CustomField>
    <fullName>ActualMargins__c</fullName>
    <label>Actual Margins</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>