force-app/main/default/objects/Project__c/fields/ActualResourceCost__c.field-meta.xml
<CustomField>
    <fullName>ActualResourceCost__c</fullName>
    <label>Actual Resource Cost</label>
    <summarizedField>ResourceTeam__c.ActualCost__c</summarizedField>
    <summaryForeignKey>ResourceTeam__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>