force-app/main/default/objects/Project__c/fields/ActualVolume__c.field-meta.xml
<CustomField>
    <fullName>ActualVolume__c</fullName>
    <label>Actual Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>