force-app/main/default/objects/Project__c/fields/Annual_Volume_Product_Rollup_2_Year__c.field-meta.xml
<CustomField>
    <fullName>Annual_Volume_Product_Rollup_2_Year__c</fullName>
    <label>Annual Volume - Product Rollup (2-Year)</label>
    <summarizedField>ProjectProduct__c.ProjectedVolume2YearImperial__c</summarizedField>
    <summaryForeignKey>ProjectProduct__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>