force-app/main/default/objects/Project__c/fields/AnnualMarginActual__c.field-meta.xml
<CustomField>
    <fullName>AnnualMarginActual__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Annual Margin - Actual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>