force-app/main/default/objects/Project__c/fields/AnnualMarginEstimated__c.field-meta.xml
<CustomField>
    <fullName>AnnualMarginEstimated__c</fullName>
    <label>Annual Margin - Estimated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>