force-app/main/default/objects/Project__c/fields/AnnualVolumeActual__c.field-meta.xml
<CustomField>
    <fullName>AnnualVolumeActual__c</fullName>
    <label>Annual Volume - Actual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>