force-app/main/default/objects/Project__c/fields/AnnualVolumeEstimated__c.field-meta.xml
<CustomField>
    <fullName>AnnualVolumeEstimated__c</fullName>
    <label>Annual Volume - Estimated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>