force-app/main/default/objects/Project__c/fields/AnnualVolumeProductRollup1Year__c.field-meta.xml
<CustomField>
    <fullName>AnnualVolumeProductRollup1Year__c</fullName>
    <label>Annual Volume - Product Rollup (1-Year)</label>
    <summarizedField>ProjectProduct__c.ProjectedVolume1YearImperial__c</summarizedField>
    <summaryForeignKey>ProjectProduct__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>