force-app/main/default/objects/Project__c/fields/Anticipated_Commercialization_Date__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Commercialization_Date__c</fullName>
    <inlineHelpText>Date anticipated to move to Measure and have a contract</inlineHelpText>
    <label>Anticipated Commercialization Date</label>
    <type>Date</type>
</CustomField>