force-app/main/default/objects/Project__c/fields/Business__c.field-meta.xml
<CustomField>
    <fullName>Business__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business</label>
    <referenceTo>Business__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>