force-app/main/default/objects/Project__c/fields/Clarizen_Project_Id__c.field-meta.xml
<CustomField>
    <fullName>Clarizen_Project_Id__c</fullName>
    <externalId>true</externalId>
    <label>Clarizen Project Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>