force-app/main/default/objects/Project__c/fields/Commercialization_Date__c.field-meta.xml
<CustomField>
    <fullName>Commercialization_Date__c</fullName>
    <formula>Opportunity__r.CloseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commercialization Date</label>
    <type>Date</type>
</CustomField>