force-app/main/default/objects/Project__c/fields/Commercialization_Date_at_Closed_Won__c.field-meta.xml
<CustomField>
    <fullName>Commercialization_Date_at_Closed_Won__c</fullName>
    <label>Commercialization Date at Closed Won</label>
    <type>Date</type>
</CustomField>