force-app/main/default/objects/Project__c/fields/Commercialization_Date_at_Implement__c.field-meta.xml
<CustomField>
    <fullName>Commercialization_Date_at_Implement__c</fullName>
    <label>Commercialization Date at Implement</label>
    <type>Date</type>
</CustomField>