force-app/main/default/objects/Project__c/fields/Commercialization_Date_at_Measure__c.field-meta.xml
<CustomField>
    <fullName>Commercialization_Date_at_Measure__c</fullName>
    <label>Commercialization Date at Measure</label>
    <type>Date</type>
</CustomField>