force-app/main/default/objects/Project__c/fields/CurrentUser__c.field-meta.xml
<CustomField>
    <fullName>CurrentUser__c</fullName>
    <formula>IF( CreatedById = $User.Id, &quot;True&quot;
,&quot;False&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CurrentUser</label>
    <type>Text</type>
</CustomField>