force-app/main/default/objects/Project__c/fields/Days_Until_Commercialization__c.field-meta.xml
<CustomField>
    <fullName>Days_Until_Commercialization__c</fullName>
    <formula>ABS(TODAY() -   Commercialization_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Until Commercialization</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>