force-app/main/default/objects/Project__c/fields/DevelopDate__c.field-meta.xml
<CustomField>
    <fullName>DevelopDate__c</fullName>
    <label>Develop Date</label>
    <type>Date</type>
</CustomField>