force-app/main/default/objects/Project__c/fields/EstimatedMargins__c.field-meta.xml
<CustomField>
    <fullName>EstimatedMargins__c</fullName>
    <label>Estimated Margins</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>