force-app/main/default/objects/Project__c/fields/EstimatedResourceCost__c.field-meta.xml
<CustomField>
    <fullName>EstimatedResourceCost__c</fullName>
    <label>Estimated Resource Cost</label>
    <summarizedField>ResourceTeam__c.EstimatedCost__c</summarizedField>
    <summaryForeignKey>ResourceTeam__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>