force-app/main/default/objects/Project__c/fields/EstimatedVolume__c.field-meta.xml
<CustomField>
    <fullName>EstimatedVolume__c</fullName>
    <label>Estimated Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>