force-app/main/default/objects/Project__c/fields/ImplementDate__c.field-meta.xml
<CustomField>
    <fullName>ImplementDate__c</fullName>
    <label>Implement Date</label>
    <type>Date</type>
</CustomField>