force-app/main/default/objects/Project__c/fields/MeasureDate__c.field-meta.xml
<CustomField>
    <fullName>MeasureDate__c</fullName>
    <label>Measure Date</label>
    <type>Date</type>
</CustomField>