force-app/main/default/objects/Project__c/fields/opportunity_Stage1__c.field-meta.xml
<CustomField>
    <fullName>opportunity_Stage1__c</fullName>
    <description>Created to update through workflow</description>
    <label>opportunity Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>