force-app/main/default/objects/Project__c/fields/OpportunityRecordType__c.field-meta.xml
<CustomField>
    <fullName>OpportunityRecordType__c</fullName>
    <formula>Opportunity__r.RecordType.Name</formula>
    <label>Opportunity Record Type</label>
    <type>Text</type>
</CustomField>