force-app/main/default/objects/Project__c/fields/OpportunitySpace__c.field-meta.xml
<CustomField>
    <fullName>OpportunitySpace__c</fullName>
    <formula>TEXT( Opportunity__r.OpportunitySpace__c )</formula>
    <label>Opportunity Space</label>
    <type>Text</type>
</CustomField>