force-app/main/default/objects/Project__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <label>Phase</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Stage__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Ideation</fullName>
            </value>
            <value>
                <fullName>Explore</fullName>
            </value>
            <value>
                <fullName>Feasibility</fullName>
            </value>
            <value>
                <fullName>Develop</fullName>
            </value>
            <value>
                <fullName>Planning</fullName>
            </value>
            <value>
                <fullName>Implement</fullName>
            </value>
            <value>
                <fullName>Measure</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>