force-app/main/default/objects/Project__c/fields/ProjectedAnnualVolume__c.field-meta.xml
<CustomField>
    <fullName>ProjectedAnnualVolume__c</fullName>
    <label>Projected Annual Volume</label>
    <summaryForeignKey>ProjectOpportunity__c.Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>