force-app/main/default/objects/Project__c/fields/Total_Project_Volume__c.field-meta.xml
<CustomField>
    <fullName>Total_Project_Volume__c</fullName>
    <formula>Total_Projected_Volume_LB_0_Year__c + Total_Projected_Volume_LB_1_Year__c + Total_Projected_Volume_LB_2_Year__c + Total_Projected_Volume_LB_3_Year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Project Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>