force-app/main/default/objects/Project__c/fields/Total_Project_Volume_CM__c.field-meta.xml
<CustomField>
    <fullName>Total_Project_Volume_CM__c</fullName>
    <formula>Total_Projected_CM_0_Year__c + Total_Projected_CM_1_Year__c + Total_Projected_CM_2_Year__c + Total_Projected_CM_3_Year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Project Volume CM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>