force-app/main/default/objects/Project__c/fields/Total_Projected_CM_0_Year__c.field-meta.xml
<CustomField>
    <fullName>Total_Projected_CM_0_Year__c</fullName>
    <label>Total Projected CM (0-Year)</label>
    <summarizedField>ProjectProduct__c.Projected_CM_0_Year__c</summarizedField>
    <summaryForeignKey>ProjectProduct__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>