force-app/main/default/objects/Project__c/fields/Total_Projected_Volume_LB_0_Year__c.field-meta.xml
<CustomField>
    <fullName>Total_Projected_Volume_LB_0_Year__c</fullName>
    <label>Total Projected Volume LB (0-Year)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>