force-app/main/default/objects/Project__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NPSS New</fullName>
            </value>
            <value>
                <fullName>NPSS Matching</fullName>
            </value>
            <value>
                <fullName>NBD CTS</fullName>
            </value>
            <value>
                <fullName>NBD Matching</fullName>
            </value>
            <value>
                <fullName>IO PPD</fullName>
            </value>
            <value>
                <fullName>IO Ingredient</fullName>
            </value>
            <value>
                <fullName>IO Out of Spec</fullName>
            </value>
            <value>
                <fullName>IO Shelf Life</fullName>
            </value>
            <value>
                <fullName>IO Knowledge</fullName>
            </value>
            <value>
                <fullName>IO Competitor Analysis</fullName>
            </value>
            <value>
                <fullName>IO Capacity</fullName>
            </value>
            <value>
                <fullName>D Support</fullName>
            </value>
            <value>
                <fullName>D Problem</fullName>
            </value>
            <value>
                <fullName>D Proactive</fullName>
            </value>
            <value>
                <fullName>D Complaint/IMPASS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>