force-app/main/default/objects/Project__c/recordTypes/Project_Approved.recordType-meta.xml
<RecordType>
    <fullName>Project_Approved</fullName>
    <active>true</active>
    <description>Record Type after a Project is approved</description>
    <label>Project (Approved)</label>
</RecordType>