force-app/main/default/objects/Project__c/recordTypes/Project_Draft.recordType-meta.xml
<RecordType>
    <fullName>Project_Draft</fullName>
    <active>true</active>
    <description>Initial Record Type when creating a Project</description>
    <label>Project (Draft)</label>
</RecordType>