force-app/main/default/objects/Project__c/recordTypes/Project_Submitted.recordType-meta.xml
<RecordType>
    <fullName>Project_Submitted</fullName>
    <active>true</active>
    <description>Record Type when a Project is submitted waiting for Approval</description>
    <label>Project (Submitted)</label>
</RecordType>