force-app/main/default/objects/Project__c/validationRules/ProjectWithOpportunityStageClosedWon.validationRule-meta.xml
<ValidationRule>
    <fullName>ProjectWithOpportunityStageClosedWon</fullName>
    <active>false</active>
    <description>If the related Opportunity is in Closed Won stage, then no update is allowed</description>
    <errorConditionFormula>ISPICKVAL(Opportunity__r.StageName , &#39;Closed Won&#39;)</errorConditionFormula>
    <errorMessage>If the related Opportunity is in Closed Won stage, then no update is allowed</errorMessage>
</ValidationRule>