force-app/main/default/objects/Project__c/validationRules/Require_Approval_to_Advance_Stage.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Approval_to_Advance_Stage</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    isApproved__c = FALSE,
    NOT(ISPICKVAL(Stage__c, &quot;Draft&quot;))
   )</errorConditionFormula>
    <errorDisplayField>Stage__c</errorDisplayField>
    <errorMessage>Project Validation Error: Project Approval is required to advance Stage.</errorMessage>
</ValidationRule>