force-app/main/default/objects/Project__c/validationRules/RestrictProjectCreationOnOppAccRecType.validationRule-meta.xml
<ValidationRule>
    <fullName>RestrictProjectCreationOnOppAccRecType</fullName>
    <active>true</active>
    <description>Project can only be created when related opportunity&#39;s account record type is &quot;Prospect or Global Account or Regional Account Group&quot;.</description>
    <errorConditionFormula>AND(Opportunity__r.Account.RecordType.Name  &lt;&gt; &#39;Global Account&#39;,
Opportunity__r.Account.RecordType.Name  &lt;&gt; &#39;Prospect&#39;,
Opportunity__r.Account.RecordType.Name  &lt;&gt; &#39;Country Account Group&#39;)</errorConditionFormula>
    <errorDisplayField>Opportunity__c</errorDisplayField>
    <errorMessage>Projects can only be created if the Opportunity ACCOUNT is a Prospect or Global Account or Regional Account Group Account Record Type.</errorMessage>
</ValidationRule>