force-app/main/default/objects/Project__c/listViews/My_Projects.listView-meta.xml
<ListView>
    <fullName>My_Projects</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Account__c</columns>
    <columns>Stage__c</columns>
    <columns>Phase__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Projects</label>
</ListView>