force-app/main/default/objects/Project__c/listViews/Projects_in_Measure_phase.listView-meta.xml
<ListView>
    <fullName>Projects_in_Measure_phase</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Stage__c</columns>
    <columns>Phase__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Phase__c</field>
        <operation>equals</operation>
        <value>Measure</value>
    </filters>
    <label>Projects in &quot;Measure&quot; phase</label>
</ListView>